add summary to cloudflare blog

--- a/public/blogs/deploying-to-cloudflare/index.html
+++ b/public/blogs/deploying-to-cloudflare/index.html
@@ -131,7 +131,7 @@
     "name": "Deploying My Portfolio with Cloudflare Pages",
     "headline": "Deploying My Portfolio with Cloudflare Pages",
     "description": "How I deployed my Hugo \u002b Congo portfolio using Cloudflare Pages.",
-    
+    "abstract": "How I deployed my Hugo \u002b Congo portfolio using Cloudflare Pages.",
     "inLanguage": "en",
     "url" : "http:\/\/localhost:1313\/blogs\/deploying-to-cloudflare\/",
     "author" : {
